objects/vlocity_cmt__ManualQueue__c.object
<CustomObject>
    <description>Manual Queue</description>
    <fields>
        <fullName>vlocity_cmt__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisplayedFields__c</fullName>
        <label>Displayed Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FilterFields__c</fullName>
        <defaultValue>&quot;State as \&quot;State\&quot;;&quot;</defaultValue>
        <label>Filter Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastAssignedToUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Assigned To User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Last Assigned User</relationshipLabel>
        <relationshipName>LastAssignedToUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NotificationEmailId__c</fullName>
        <label>Notification Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QueueType__c</fullName>
        <label>Queue Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attributes-Based</fullName>
                    <default>true</default>
                    <label>Attributes-Based</label>
                </value>
                <value>
                    <fullName>Round Robin</fullName>
                </value>
                <value>
                    <fullName>Least Loaded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Manual Queue</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Manual Queue</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manual Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>